MDEV-34426: Assertion failure on bootstrap

Let us relax an assertion that would fail in
./mtr main.1st --mysqld=--innodb-undo-tablespaces=127